<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">PhotoEditor</string>
    <string name="temp_images_dir">temp_images</string>
    <string name="temp_image">temp_image.jpg</string>
    <string name="authorities">com.example.fileprovider</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brightness">Jasność</string>
    <string name="sharpness">Ostrość</string>
    <string name="blur">Rozmycie</string>
    <string name="contrast">Kontrast</string>
    <string name="colour_balance">Balans \nkolorów</string>
    <string name="gamma_correction">Korekcja gamma</string>
    <string name="apply">Zastosuj</string>
    <string name="revert">Cofnij</string>
    <string name="accept">Zatwierdź</string>
</resources>